--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "edit": "craco start",
     "build": "craco build",
-    "test": "craco test",
+    "test": "craco start",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
